--- a/app/globals.css
+++ b/app/globals.css
@@ -39,11 +39,26 @@
     
 
     transform: translateY(0) translateZ(-1px) scale(1); 
-}
+  }
+
+  .text {
+    background: linear-gradient(
+      to right,
+      rgb(255, 255, 255) 50%,
+      rgb(37, 37, 37) 50%
+    );
+    background-size: 200% 100%;
+    background-position-x: 100%;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    margin-bottom: -250px;
+    margin-left: 50px;
+  }
 
 
   .stroke-text {
-    -webkit-text-stroke: 3px #f4f3f1; /* Define the width and color of the stroke */
+    -webkit-text-stroke: 2px rgb(248 113 113); /* Define the width and color of the stroke */
     text-fill-color: transparent; /* This is often needed for better browser compatibility */
   }
 
@@ -73,4 +88,5 @@ html {
 }
 
 .body {
+  overflow-x: hidden;
 }
